# Elderly-Virtual-Assistant-EVA

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile2  LICENSE  Notes_Semless.txt  README.md  cmds.sbatch  docker-compose.yml  pyproject.toml  record_audio.py  requirements.txt  start_avatar.bat  start_avatar.sh  test.py
.github/workflows/: black-formating.yml  tests.yml
TextToVoice/seamless_communication-main/: How_To_Use_Seamless.md
aClient/: Dockerfile  app.py  avatar_communicator.py  pyproject.toml  record_audio.py  scp_with_password.exp
aClient/static/: style.css
aClient/static/js/: recordPlayback.js
aClient/templates/: index.html
app/: listf.py
app/Llm/: .dockerignore  .env  DockerFile  Dockerfile  README.md  llm_app.py  pyproject.toml
app/Llm/app/: app.py  model.py
app/Llm_cpu/: .gitignore  Dockerfile  client.py  readme.md  requirements.txt  server.py
app/Llm_cpu/llama/: .gitignore  README.md  build-info.h
app/Llm_cpu/test/: test1.py
app/Llm_cpu/tests/: test.py
app/Pipeline/: Dockerfile
app/TextToVoice/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/TextToVoice/app/: audio_check_server.py  runapps.sh  start_texttovoice.py  transcription.json  voiceGen.py
app/VoiceToText/: Dockerfile  Dockerfile-flask  Dockerfile-magic  README.md  helpers.py  pyproject.toml  requirements.txt
app/VoiceToText/app/: flaskRecord.py  requests.py  transcribeApp.py  transcribeMagic.py  transcribeMain.py  transcription.json
app/VoiceToVideo/: Dockerfile
app/VoiceToVideo/app/: videoGen.py
app/VoiceToVideo/app/2023_10_20_18.22.39/: face##bark_audio_1697826150.mat  face##bark_audio_1697826150.txt
app/VoiceToVideo/app/2023_10_20_18.22.39/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_21_14.12.30/: face##bark_audio_1697897541.mat  face##bark_audio_1697897541.txt
app/VoiceToVideo/app/2023_10_21_14.12.30/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_21_14.27.35/: face##bark_audio_1697898443.mat  face##bark_audio_1697898443.txt
app/VoiceToVideo/app/2023_10_21_14.27.35/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_21_14.51.46/: face##bark_audio_1697899897.mat  face##bark_audio_1697899897.txt
app/VoiceToVideo/app/2023_10_21_14.51.46/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_21_14.52.46/: face##bark_audio_1697899954.mat  face##bark_audio_1697899954.txt
app/VoiceToVideo/app/2023_10_21_14.52.46/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_21_15.00.43/: face##bark_audio_1697900425.mat  face##bark_audio_1697900425.txt
app/VoiceToVideo/app/2023_10_21_15.00.43/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_21_15.02.44/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_22_16.27.56/: face##bark_audio_1697992067.mat  face##bark_audio_1697992067.txt
app/VoiceToVideo/app/2023_10_22_16.27.56/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_22_16.29.41/: face##bark_audio_1697992169.mat  face##bark_audio_1697992169.txt
app/VoiceToVideo/app/2023_10_22_16.29.41/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_22_19.54.58/: face##bark_audio_1698004490.mat  face##bark_audio_1698004490.txt
app/VoiceToVideo/app/2023_10_22_19.54.58/first_frame_dir/: face.mat
app/VoiceToVideo/app/2023_10_22_20.03.05/: face##bark_audio_1698004973.mat  face##bark_audio_1698004973.txt
app/VoiceToVideo/app/2023_10_22_20.03.05/first_frame_dir/: face.mat  face_landmarks.txt
docker/: Dockerfile  Dockerfile_VoiceToText
seamless_communication-main/: english_text.txt
seamless_communication-main/scripts/m4t/predict/: predict.py
tests/test_TextToVoice/: test_TextToVoice.py
tests/test_VoiceToText/: test_VoiceToText.py
