[tool.poetry]
name = "aclient"
version = "0.1.0"
description = ""
authors = ["HJacksons <jacksonherberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uuid = "^1.30"
Flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-session = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
