[tool.poetry]
name = "acit4040-ai-project"
version = "0.1.0"
description = ""
authors = ["Jackson Herbert Sinamenye <s371140@oslomet.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pytest = "^7.4.2"
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
soundfile = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
