[tool.poetry]
name = "acit4040-ai-project"
version = "0.1.0"
description = ""
authors = ["Jackson Herbert Sinamenye <s371140@oslomet.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.0.1"
pytest = "^7.4.2"
numpy = "^1.24.0"
numba = "^0.57.1"
tqdm = "^4.66.1"
more-itertools = "^10.1.0"
tiktoken = "0.3.3"
openai-whisper = "^20230918"
ffmpeg = "^1.4"
pytest-mock = "^3.11.1"
triton = "2.0.0"
setuptools-rust = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
